--- a/accounting-cards/accounting-cards.csproj
+++ b/accounting-cards/accounting-cards.csproj
@@ -120,7 +120,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="App_Start\WebConfig.cs" />
-        <Compile Include="Controllers\HomeController.cs" />
+        <Compile Include="Controllers\CardController.cs" />
         <Compile Include="Global.asax.cs">
             <DependentUpon>Global.asax</DependentUpon>
         </Compile>
