新增：(R)明細清單

--- a/accounting-cards/accounting-cards.csproj
+++ b/accounting-cards/accounting-cards.csproj
@@ -121,6 +121,7 @@
     <ItemGroup>
         <Compile Include="App_Start\WebConfig.cs" />
         <Compile Include="Controllers\CardController.cs" />
+        <Compile Include="Controllers\DetailController.cs" />
         <Compile Include="Global.asax.cs">
             <DependentUpon>Global.asax</DependentUpon>
         </Compile>
