--- a/accounting-cards/accounting-cards.csproj
+++ b/accounting-cards/accounting-cards.csproj
@@ -132,6 +132,7 @@
         <Content Include="favicon.ico" />
         <Content Include="Global.asax" />
         <Content Include="index.html" />
+        <Content Include="index.js" />
         <Content Include="Web.config" />
         <Content Include="Web.Debug.config">
             <DependentUpon>Web.config</DependentUpon>
