BUG：遺失 web api & web host 套件

--- a/accounting-cards/accounting-cards.csproj
+++ b/accounting-cards/accounting-cards.csproj
@@ -46,6 +46,10 @@
         <Reference Include="System" />
         <Reference Include="System.Data" />
         <Reference Include="System.Drawing" />
+        <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
+          <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Runtime.Caching" />
         <Reference Include="System.Web.DynamicData" />
         <Reference Include="System.Web.ApplicationServices" />
@@ -53,10 +57,12 @@
         <Reference Include="System.Core" />
         <Reference Include="System.Data.DataSetExtensions" />
         <Reference Include="System.Web.Http, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
-          <HintPath>..\..\..\git-lab\farmland-survey\farmland-survey\bin\System.Web.Http.dll</HintPath>
+          <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.7\lib\net45\System.Web.Http.dll</HintPath>
+          <Private>True</Private>
         </Reference>
         <Reference Include="System.Web.Http.WebHost, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
-          <HintPath>..\..\..\git-lab\farmland-survey\farmland-survey\bin\System.Web.Http.WebHost.dll</HintPath>
+          <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.7\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+          <Private>True</Private>
         </Reference>
         <Reference Include="System.Xml.Linq" />
         <Reference Include="System.Web" />
@@ -140,10 +146,6 @@
         <Content Include="Web.Release.config">
             <DependentUpon>Web.config</DependentUpon>
         </Content>
-    </ItemGroup>
-    <ItemGroup>
-        <Folder Include="App_Data" />
-        <Folder Include="Models" />
     </ItemGroup>
     <ItemGroup>
         <None Include="packages.config" />
