Feat: 從 firebase 取得使用者資料

--- a/accounting-cards/accounting-cards.csproj
+++ b/accounting-cards/accounting-cards.csproj
@@ -228,6 +228,7 @@
     <Compile Include="App_Start\WebConfig.cs" />
     <Compile Include="Controllers\CardController.cs" />
     <Compile Include="Controllers\DetailController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
