Feat: 取得使用者ID - 新增通用 css

--- a/accounting-cards/accounting-cards.csproj
+++ b/accounting-cards/accounting-cards.csproj
@@ -264,6 +264,7 @@
     <Compile Include="Services\DataService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="all.css" />
     <Content Include="all.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
